refactor: rename board fields
